--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^8.5.8",
+    "@walletconnect/types": "^1.7.7",
+    "@walletconnect/web3-provider": "^1.7.7",
+    "ethers": "^5.6.4",
+    "jsonwebtoken": "^8.5.1",
     "next": "12.1.5",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "web3modal": "^1.9.7"
   },
   "devDependencies": {
     "@types/node": "17.0.27",
