--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,16 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true
+    "incremental": true,
+    "paths": {
+      "components/*": ["./src/components/*"],
+      "lib/*": ["./src/lib/*"],
+      "gql/*": ["./src/gql/*"],
+      "styles/*": ["./src/styles/*"],
+      "utils/*": ["./src/utils/*"],
+      "data/*": ["./src/data/*"],
+      "public/*": ["./public/*"]
+    }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
